# github-webhook-server

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yaml  pyproject.toml  requirements.txt  webhook_server.py
templates/: index.html
